# blueberry_homework

./: .dockerignore  .env  .env_setting  .gitignore  BerryApi.csproj  BerryApiSolution.sln  BerryNameApi.csproj  Cargo.toml  Dockerfile  HOW.md  Program.cs  README.md  README_django.md  README_kopring.md  build.gradle.kts  docker-compose.yml  flowchart.md  go.mod  go.sum  main.go  main.py  mongo_schema.json  name_model.py  name_repository.py  requirements.txt  scylla.yaml  settings.gradle.kts  test_api.sh  test_auth_api.sh  tmp_database.py  설명서.md
App/: AppInitializer.cs  MongoDBInitializer.cs
Config/: AppSettings.cs
Controllers/: AuthController.cs  CompanyController.cs  NameController.cs
Entities/: CompanyEntity.cs  UserEntity.cs
Middleware/: JwtMiddleware.cs  VerifyTokenMiddleware.cs
Properties/: launchSettings.json
Repositories/: AuthRepository.cs  CompanyRepository.cs  NameRepository.cs
UseCases/: AuthUseCase.cs  CompanyUseCase.cs  NameUseCase.cs  RefreshUseCase.cs  Result.cs
Utils/: Contstants.cs  HashMaker.cs  JwtTokenGenerator.cs  JwtUtils.cs  Unit.cs
app/: app.go
config/: config.go
constants/: error_response.py
db/: db.go  db.py
entities/: company_entity.py  name_entity.py  user_entity.py
entity/: company.go  user.go
handler/: auth_handler.go  company_handler.go  name_handler.go
handlers/: auth_handler.py  company_handler.py  name_handler.py
middleware/: verify_token.go  verify_token.py
minitest/: .env  apps.py  models.py  repositories.py  serializer.py  tmp_database.py  urls.py  views.py
mysite/: settings.py  urls.py
practice/: array.go  forloop.go  ifelse.go  map.go  slice.go  variable.go
repositories/: auth_repository.py  (+2 more)
src/: di.rs  (+2 more)
(+211 files in other folders)
