[package]
name = "blueberry_homework"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenv = { version = "0.15.0", features = ["cli"] }
async-trait = "0.1.88"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = "0.23.0"


