[package]
name = "blueberry_homework"
version = "0.1.0"
edition = "2021"

[dependencies]
# http
axum = { version = "0.8.3", features = ["macros"] }

# serialization and deserialization
serde = { version =  "1.0.219", features = ["derive"] }

# json serialization and deserialization
serde_json = "1.0.140"

# async await
tokio = { version = "1.44.1", features = ["full"] }

# for api
tower = "0.5.2"

# tower expansion trait
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# logging
tracing = "0.1.41"

# logging
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

#env
dotenv = { version = "0.15.0", features = ["cli"] }

# async trait
async-trait = "0.1.88"

# validation
validator = { version = "0.20.0", features = ["derive"] }

# data validation
axum-valid = "0.23.0"

# time
chrono = { version = "0.4.40", features = ["serde"]}

# id
uuid = { version = "1.16.0", features = ["v4"]}

# NoSQL DB
scylla = "1.1.0"

futures = "0.3.31"
